gccida/c3/combine_stack_adjustments_for_block
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_stack_adjustments_for_block/src/regmove.c:2821:13: error: expected identifier or '('
 struct set = single_set_for_csa( insn); 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_stack_adjustments_for_block/src/regmove.c:2825:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)set[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_stack_adjustments_for_block/src/regmove.c:2843:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), global_rtl[2]) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_stack_adjustments_for_block/src/regmove.c:2843:41: error: expected expression
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest), global_rtl[2]) ) 
                                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_stack_adjustments_for_block/src/obj/regmove.o] Error 1
